--- a/index.html
+++ b/index.html
@@ -8,6 +8,42 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>
-    
+    <div class="calculator">
+        <div class="display">
+            123
+        </div>
+        <div class="buttons">
+            <div class="row">
+                <button>+</button>
+                <button>-</button>
+                <button>*</button>
+                <button>/</button>
+            </div>
+            <div class="middle">
+                <div class="numbers">
+                    <div class="row">
+                        <button>7</button>
+                        <button>8</button>
+                        <button>9</button>
+                    </div>
+                    <div class="row">
+                        <button>4</button>
+                        <button>5</button>
+                        <button>6</button>
+                    </div>
+                    <div class="row">
+                        <button>1</button>
+                        <button>2</button>
+                        <button>3</button>
+                    </div>
+                </div>
+                <button>=</button>
+            </div>
+            <div class="row">
+                <button>0</button>
+                <button>C</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
